<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardforclickingondetailpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectanngleshap"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/rlforencryptedlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >


            <ImageView
                android:id="@+id/ivencryptedtextimage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="false"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textencrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="110dp"
                android:gravity="start"
                android:text="@string/Encryption"
                android:textColor="@color/color_grey"
                android:textColorHighlight="@color/white"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivencryptedtextimage"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectanngleshap"
                    android:padding="10dp"
                    android:text="@string/share_image" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectanngleshap"
                    android:padding="10dp"
                    android:text="@string/delete_image" />


                <!--        android:onClick="Encryption"-->
            </LinearLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>